style: :lipstick: gh actions dialog dark mode issue

--- a/projects/ui/src/app/micro-frontend/pages/github-actions/github-actions.component.css
+++ b/projects/ui/src/app/micro-frontend/pages/github-actions/github-actions.component.css
@@ -18,6 +18,7 @@
   padding: 1rem;
   padding-bottom: 0;
   font-size: var(--sapFontSize);
+  color: var(--sapField_TextColor);
 }
 
 #message-popover {
